--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@heroicons/react": "^2.1.3",
     "@prisma/client": "^5.13.0",
     "cloudinary": "^2.2.0",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.9.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
